apps/blue/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-blue
  namespace: flux-system
  labels:
    app: database
    version: blue
spec:
  selector:
    app: database
    version: blue
  ports:
    - name: http
      port: 18084
      targetPort: 18084
      protocol: TCP
