apps/blue/database-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  namespace: flux-system
  labels:
    app: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
      - name: database-app
        image: kirtigupta1234/github-flux-database:latest-1746793385
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 18082
            protocol: TCP
          - containerPort: 18083
            protocol: TCP
          - containerPort: 18084
            protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: flux-system
  labels:
    app: database
spec:
  selector:
    app: database
  ports:
    - name: http
      port: 18084
      targetPort: 18084
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: database-ingress
  namespace: flux-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: db.local
      http:
        paths:
        - path: /db-web(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: database
              port:
                number: 80
